# home-credit-default-risk

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
docs/: eda_summary.md
modeling/: calibrate.py  config.py  data.py  evaluate.py  explain.py  predict.py  run_pipeline.py  split.py  train.py
scripts/: build_warehouse.sh  load_raw_data.py
src/home_credit/: config.py  data.py  eda.py  features.py
src/home_credit/explain/: __init__.py  shap_explainer.py
src/home_credit/ingest/: __init__.py  load_raw_data.py  schemas.py
src/home_credit/modeling/: __init__.py  calibrate.py  cv.py  evaluate.py  models.py  predict.py  run_pipeline.py  train.py
src/home_credit/serving/: __init__.py  api.py
src/home_credit/validation/: __init__.py  schemas.py  validate_mart.py
tests/: conftest.py  generate_synthetic_data.py  test_eda.py  test_explain.py  test_features.py  test_ingest.py  test_modeling.py  test_serving.py  test_validation.py
warehouse/: dbt_project.yml  profiles.yml
warehouse/macros/: generate_schema_name.sql
warehouse/models/marts/: _marts.yml  mart_applicant_features.sql
warehouse/models/staging/: _sources.yml  _staging.yml  stg_application.sql  stg_bureau.sql  stg_bureau_balance.sql  stg_credit_card_balance.sql  stg_installments_payments.sql  stg_pos_cash_balance.sql  stg_previous_application.sql
warehouse/tests/: assert_train_test_target_consistency.sql
